// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swiper > Swiper baseVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    
    <!---->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
    >
      
      
      
      
      <!---->
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper cardVue demo works fine 1`] = `
<div
  class="t-swiper t-swiper--card"
>
  <div
    class="t-swiper__container"
    style="flex-direction: row; transition: none; height: auto;"
  >
    
    
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
      />
      
    </div>
    <div
      class="t-swiper-item"
      style=""
    >
      
      <img
        class="img"
        src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
      />
      
    </div>
    
    
  </div>
  
  <!---->
  <span
    class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
  >
    
    
    
    
    <!---->
  </span>
  
</div>
`;

exports[`Swiper > Swiper controlVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    
    <span
      class="t-swiper-nav__btn"
    >
      <span
        class="t-swiper-nav__btn--prev"
      />
      <span
        class="t-swiper-nav__btn--next"
      />
    </span>
    <!---->
    
  </div>
</div>
`;

exports[`Swiper > Swiper customVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    
    <!---->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__dots-bar t-swiper-nav--bottom"
    >
      
      
      
      
      <!---->
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper fractionVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    
    <!---->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__fraction t-swiper-nav--bottom-right"
    >
      <!---->
      <span>
        1/0
      </span>
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Swiper 轮播
  </h1>
  <p
    class="summary"
  >
    用于循环轮播一组图片或内容，也可以滑动进行切换，轮播动效时间可以设置。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        点状（dots）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <!---->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
          >
            
            
            
            
            <!---->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        条状（dots-bar）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <!---->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__dots-bar t-swiper-nav--bottom"
          >
            
            
            
            
            <!---->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        分式（fraction）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <!---->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__fraction t-swiper-nav--bottom-right"
          >
            <!---->
            <span>
              1/0
            </span>
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        切换按钮（controls）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <span
            class="t-swiper-nav__btn"
          >
            <span
              class="t-swiper-nav__btn--prev"
            />
            <span
              class="t-swiper-nav__btn--next"
            />
          </span>
          <!---->
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        手动跳转（current）
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <!---->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom"
          >
            
            
            
            
            <!---->
          </span>
          
        </div>
        <div
          class="tdesign-demo-block-row"
        >
          <button
            aria-disabled="false"
            class="t-button t-button--size-small t-button--base t-button--primary t-button--rectangle"
            role="button"
            type="button"
          >
            <!---->
            <span
              class="t-button__content"
            >
              
               跳转到第 2 项 
              
            </span>
            <!---->
          </button>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        垂直模式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: column; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style=""
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <!---->
          <span
            class="t-swiper-nav--vertical t-swiper-nav__dots-bar t-swiper-nav--right"
          >
            
            
            
            
            <!---->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        outside模式
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        style="padding: 0px 16px;"
      >
        <div
          class="t-swiper t-swiper--default t-swiper--outside"
        >
          <div
            class="t-swiper__container"
            style="flex-direction: row; transition: none; height: auto;"
          >
            
            
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
              />
              
            </div>
            <div
              class="t-swiper-item"
              style="height: 192px;"
            >
              
              <img
                class="img"
                src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
              />
              
            </div>
            
            
          </div>
          
          <!---->
          <span
            class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom t-swiper-nav--outside"
          >
            
            
            
            
            <!---->
          </span>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Swiper > Swiper outsideVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default t-swiper--outside"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: row; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style="height: 192px;"
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    
    <!---->
    <span
      class="t-swiper-nav--horizontal t-swiper-nav__dots t-swiper-nav--bottom t-swiper-nav--outside"
    >
      
      
      
      
      <!---->
    </span>
    
  </div>
</div>
`;

exports[`Swiper > Swiper verticalVue demo works fine 1`] = `
<div
  style="padding: 0px 16px;"
>
  <div
    class="t-swiper t-swiper--default"
  >
    <div
      class="t-swiper__container"
      style="flex-direction: column; transition: none; height: auto;"
    >
      
      
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper2.png"
        />
        
      </div>
      <div
        class="t-swiper-item"
        style=""
      >
        
        <img
          class="img"
          src="https://tdesign.gtimg.com/mobile/demos/swiper1.png"
        />
        
      </div>
      
      
    </div>
    
    <!---->
    <span
      class="t-swiper-nav--vertical t-swiper-nav__dots-bar t-swiper-nav--right"
    >
      
      
      
      
      <!---->
    </span>
    
  </div>
</div>
`;
